--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Einherjar",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg-promise": "^11.5.0"
